2018.8/_sources/plugins/available/feature-table/tabulate-seqs.txt
tabulate-seqs: View sequence associated with each feature
=========================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-table:tabulate-seqs.bib
   :all:
   :keyprefix: feature-table:tabulate-seqs:
   :labelprefix: feature-table:tabulate-seqs:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-table tabulate-seqs [OPTIONS]

     Generate tabular view of feature identifier to sequence mapping, including
     links to BLAST each sequence against the NCBI nt database.

   Options:
     --i-data ARTIFACT PATH FeatureData[Sequence]
                                     The feature sequences to be tabulated.
                                     [required]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_table.visualizers import tabulate_seqs

.. raw:: html

       <h4>Docstring:</h4>
         <pre>View sequence associated with each feature

   Generate tabular view of feature identifier to sequence mapping, including
   links to BLAST each sequence against the NCBI nt database.

   Parameters
   ----------
   data : FeatureData[Sequence]
       The feature sequences to be tabulated.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>